--- a/LightRunner-wp7/LightRunner-wp7/LightRunner-wp7/bin/Windows Phone/Debug/AppManifest.xaml
+++ b/LightRunner-wp7/LightRunner-wp7/LightRunner-wp7/bin/Windows Phone/Debug/AppManifest.xaml
@@ -1,4 +1,4 @@
-﻿<Deployment xmlns="http://schemas.microsoft.com/client/2007/deployment" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" EntryPointAssembly="LightRunner-wp7" EntryPointType="LightRunner_wp7.Game1" RuntimeVersion="3.0">
+﻿<Deployment xmlns="http://schemas.microsoft.com/client/2007/deployment" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" EntryPointAssembly="LightRunner-wp7" EntryPointType="LightRunner_wp7.GameScreen" RuntimeVersion="3.0">
   <Deployment.Parts>
     <AssemblyPart x:Name="LightRunner-wp7" Source="LightRunner-wp7.dll" />
   </Deployment.Parts>
